Промежуточный комит. Есть докер. Есть коррекция текста. Но не запускается сервер коррекции текста.

--- a/html_page_saver.ipynb
+++ b/html_page_saver.ipynb
@@ -582,16 +582,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Number of drivers\n",
-    "drivers_num = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -616,6 +606,8 @@
     }
    ],
    "source": [
+    "# Number of drivers\n",
+    "drivers_num = 4\n",
     "# Define your make_driver function\n",
     "def make_driver():\n",
     "    driver = webdriver.Chrome(options=chrome_options)\n",
@@ -638,6 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Create a queue and add tasks\n",
     "task_queue = Queue()\n",
     "for row in df_categories[20:1200].iterrows():\n",
