Подкорректировал text_correction, чтобы обрабатывал по частям

--- a/keywords_extraction test.ipynb
+++ b/keywords_extraction test.ipynb
@@ -1265,7 +1265,7 @@
       ],
       "source": [
         "# Разворачиваем столбец processed_constructions на два столбца\n",
-        "df_exploded_constructions[[\"text_details\", \"text\"]] = df_exploded_constructions[\"processed_constructions\"].apply(lambda x: pd.Series(x) if isinstance(x, dict) else pd.Series({\"text\": None, \"details\": None}))\n",
+        "df_exploded_constructions[[\"text\", \"text_details\"]] = df_exploded_constructions[\"processed_constructions\"].apply(lambda x: pd.Series(x) if isinstance(x, dict) else pd.Series({\"text\": None, \"details\": None}))[\"text\", \"text_details\"]\n",
         "df_details = df_exploded_constructions.drop([\"processed_constructions\"], axis=1)\n",
         "df_details"
       ]
