Здесь реализована иерархическая версия, но она долгая

--- a/keywods_pavlov2.ipynb
+++ b/keywods_pavlov2.ipynb
@@ -575,13 +575,6 @@
     "    r'пришел в полном порядке', r'все дошло целым', r'доволен доставкой', r'довольна доставкой'\n",
     "]\n",
     "\n",
-    "confirmation_phrases = [\n",
-    "    r'всё соответствует', r'всё как в описании', r'всё как заявлено', r'соответствует описанию', \n",
-    "    r'всё норм', r'всё хорошо', r'как всегда', r'без проблем', \n",
-    "    r'нормально', r'всё норм', r'полностью доволен', r'полностью довольна', \n",
-    "    r'всё понравилось'\n",
-    "]\n",
-    "\n",
     "simple_statements_phrases = [\n",
     "    r'хорошая вещь', r'классная вещь', r'отличная вещь', r'удобно', r'нормально', r'работает', \n",
     "    r'работает отлично', r'работает хорошо', r'всё нормально', r'всё работает', r'всё ок', \n",
@@ -594,8 +587,11 @@
     "    \"🥳\", \"🎁\", \"😑\", \"😳\", \"🙈\", \"😤\", \"👑\", \"😢\", \"🤤\", \"🤞\"\n",
     "]\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "# Определение масок и их эмбеддингов\n",
-    "mask_phrases = quality_phrases + functionality_phrases + gratitude_phrases + delivery_phrases + confirmation_phrases + simple_statements_phrases\n",
+    "mask_phrases = quality_phrases + functionality_phrases + gratitude_phrases + delivery_phrases + simple_statements_phrases\n",
     "\n",
     "# Лемматизация и создание эмбеддингов для масок\n",
     "lemmatized_masks = lemmatize_sentences(mask_phrases)\n",
@@ -2187,65 +2183,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def filter_tokens(syntax_analysis):\n",
-    "#     # Отключаем некоторые фильтры для проверки\n",
-    "#     filtered_tokens = [\n",
-    "#         token for token in syntax_analysis \n",
-    "#         if token[1] not in {\"PUNCT\", \"SPACE\"}  # Исключаем только знаки препинания и пробелы\n",
-    "#         # Отключаем фильтрацию по длине\n",
-    "#     ]\n",
+    "def filter_tokens(syntax_analysis):\n",
+    "    # Отключаем некоторые фильтры для проверки\n",
+    "    filtered_tokens = [\n",
+    "        token for token in syntax_analysis \n",
+    "        if token[1] not in {\"PUNCT\", \"SPACE\"}  # Исключаем только знаки препинания и пробелы\n",
+    "        # Отключаем фильтрацию по длине\n",
+    "    ]\n",
     "    \n",
-    "#     return filtered_tokens\n",
+    "    return filtered_tokens\n",
     "\n",
-    "# def extract_key_phrases_from_sentences(doc):\n",
-    "#     key_phrases = []\n",
+    "def extract_key_phrases_from_sentences(doc):\n",
+    "    key_phrases = []\n",
     "    \n",
-    "#     for sent in doc.sents:\n",
-    "#         syntax_analysis = [(token.text, token.pos_, token.dep_, token.head.text) for token in sent]\n",
-    "#         filtered_tokens = filter_tokens(syntax_analysis)\n",
-    "#         phrase = []\n",
+    "    for sent in doc.sents:\n",
+    "        syntax_analysis = [(token.text, token.pos_, token.dep_, token.head.text) for token in sent]\n",
+    "        filtered_tokens = filter_tokens(syntax_analysis)\n",
+    "        phrase = []\n",
     "\n",
-    "#         for i, token in enumerate(filtered_tokens):\n",
-    "#             if token[1] in {\"NOUN\", \"VERB\"}:  # Существительное или глагол\n",
-    "#                 if phrase:\n",
-    "#                     key_phrases.append(\" \".join(phrase))\n",
-    "#                     phrase = []\n",
-    "#                 phrase.append(token[0])\n",
-    "#             elif token[1] in {\"ADJ\", \"ADV\"}:  # Прилагательные, наречия\n",
-    "#                 if phrase:\n",
-    "#                     phrase.append(token[0])\n",
+    "        for i, token in enumerate(filtered_tokens):\n",
+    "            if token[1] in {\"NOUN\", \"VERB\"}:  # Существительное или глагол\n",
+    "                if phrase:\n",
+    "                    key_phrases.append(\" \".join(phrase))\n",
+    "                    phrase = []\n",
+    "                phrase.append(token[0])\n",
+    "            elif token[1] in {\"ADJ\", \"ADV\"}:  # Прилагательные, наречия\n",
+    "                if phrase:\n",
+    "                    phrase.append(token[0])\n",
     "\n",
-    "#             # Если конец текста или следующая часть речи не связана с текущей фразой\n",
-    "#             if i == len(filtered_tokens) - 1 or filtered_tokens[i+1][1] not in {\"ADJ\", \"ADV\", \"ADP\", \"CCONJ\", \"SCONJ\", \"PART\"}:\n",
-    "#                 if phrase:\n",
-    "#                     key_phrases.append(\" \".join(phrase))\n",
-    "#                     phrase = []\n",
-    "#     key_phrases = [phrase for phrase in key_phrases if len(phrase.split()) > 1 and len(phrase.strip()) > 2]\n",
+    "            # Если конец текста или следующая часть речи не связана с текущей фразой\n",
+    "            if i == len(filtered_tokens) - 1 or filtered_tokens[i+1][1] not in {\"ADJ\", \"ADV\", \"ADP\", \"CCONJ\", \"SCONJ\", \"PART\"}:\n",
+    "                if phrase:\n",
+    "                    key_phrases.append(\" \".join(phrase))\n",
+    "                    phrase = []\n",
+    "    key_phrases = [phrase for phrase in key_phrases if len(phrase.split()) > 1 and len(phrase.strip()) > 2]\n",
     "\n",
-    "#     return \" \".join(key_phrases)\n",
-    "\n",
-    "\n",
-    "# def extract_key_phrases_from_clusters(clusters):\n",
-    "#     key_phrases = []\n",
-    "#     for cluster in clusters:\n",
-    "#         cluster_key_phrases = []\n",
-    "#         for sentences in cluster:  # Так как cluster теперь список списков\n",
-    "#             doc = nlp(sentences)\n",
-    "#             cluster_key_phrases.append(extract_key_phrases_from_sentences(doc))\n",
-    "#         key_phrases.append(\" \".join(cluster_key_phrases))  # Соединяем все ключевые фразы из одного кластера в одну строку\n",
-    "#     return key_phrases\n",
-    "\n",
-    "# # Применение функции\n",
-    "# dataset = dataset.map(lambda batch: {\"key_phrases\": extract_key_phrases_from_clusters(batch['clusters'])}, batched=True, batch_size=8)\n",
+    "    return \" \".join(key_phrases)\n",
     "\n",
     "\n",
-    "# # Частотный анализ по ключевым фразам\n",
-    "# key_phrases = dataset['key_phrases']\n",
-    "# phrase_freq = Counter(key_phrases)\n",
+    "def extract_key_phrases_from_clusters(clusters):\n",
+    "    key_phrases = []\n",
+    "    for cluster in clusters:\n",
+    "        cluster_key_phrases = []\n",
+    "        for sentences in cluster:  # Так как cluster теперь список списков\n",
+    "            doc = nlp(sentences)\n",
+    "            cluster_key_phrases.append(extract_key_phrases_from_sentences(doc))\n",
+    "        key_phrases.append(\" \".join(cluster_key_phrases))  # Соединяем все ключевые фразы из одного кластера в одну строку\n",
+    "    return key_phrases\n",
     "\n",
-    "# # Вывод результатов\n",
-    "# print(\"Частотный анализ ключевых фраз (по семантической близости):\")\n",
-    "# print(phrase_freq.most_common(10))"
+    "# Применение функции\n",
+    "dataset = dataset.map(lambda batch: {\"key_phrases\": extract_key_phrases_from_clusters(batch['clusters'])}, batched=True, batch_size=8)\n",
+    "\n",
+    "\n",
+    "# Частотный анализ по ключевым фразам\n",
+    "key_phrases = dataset['key_phrases']\n",
+    "phrase_freq = Counter(key_phrases)\n",
+    "\n",
+    "# Вывод результатов\n",
+    "print(\"Частотный анализ ключевых фраз (по семантической близости):\")\n",
+    "print(phrase_freq.most_common(10))"
    ]
   },
   {
